--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
 
 </main>
 
+<script src="js/content.js"></script>
+
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116161398-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
