--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Brad Brock | Web Developer | Dallas, Texas</title>
     <link rel="stylesheet" href="./css/style.css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:300,400&display=swap" rel="stylesheet"> -->
-
-    <<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
