Added Fossil project

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                     <article>
                         <ul class="gallery">
                             <li class="gallery-item">
+                                <a href="https://www.fossil.com" id="fossilEcommProject">
+                                    <p class="gallery-item__title">Fossil Ecomm</p>
+                                    <p class="gallery-item__subtitle">Fossil (2021)</p>
+                                </a>
+                            </li>
+                            <li class="gallery-item">
                                 <a href="https://www.behance.net/gallery/59120319/Heifer-International-Shopping-Cart-(2017)" id="heiferCartProject">
                                     <p class="gallery-item__title">Shopping Cart &amp; Checkout</p>
                                     <p class="gallery-item__subtitle">Heifer Intl (2017)</p>
@@ -114,12 +120,12 @@
                                     <p class="gallery-item__subtitle">Curves Gyms (2015)</p>
                                 </a>
                             </li>
-                            <li class="gallery-item">
+                            <!-- <li class="gallery-item">
                                 <a href="https://www.behance.net/gallery/59089753/Einstein-Bros-Landing-Page-(2014)" id="einsteinsProject">
                                     <p class="gallery-item__title">Promo Landing Page</p>
                                     <p class="gallery-item__subtitle">Einstein Bros. (2014)</p>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </article>
                     <h3>Clients</h3>
