Added Cinemark experience

--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
                 <section class="card">
                     <h3>Experience</h3>
                     <article>
-                        <h4>UI Developer 2, Fossil Group | June 2018 - present</h4>
+                        <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
+                        <ul>
+                            <li>Implemented updated sitewide redesign.</li>
+                            <li>Create A/B test campaigns in Salesforce Interaction Studio (Evergage).</li>
+                            <li>Implement complete redesign of checkout process.</li>
+                        </ul>
+                    </article>
+                    <article>
+                        <h4>UI Developer 2, Fossil Group | June 2018 - October 2021</h4>
                         <ul>
                             <li>Collaborated with UX and UI designers to implement a design refresh of skagen.com.</li>
                             <li>Worked with in-house AllY specialists to ensure accessibility best practices on fossil.com, as well as other Fossil-owned brand websites.</li>
