--- a/index.html
+++ b/index.html
@@ -13,41 +13,38 @@
 <body>
 
 <header>
-    <div class="wrap">
-        <div class="title">
-            <h1>Brad Brock</h1>
-            <h2>UI Developer + Designer</h2>
-        </div>
-        <ul class="link-gallery">
-            <li>
-                <a href="https://github.com/bradbrock">
-                    <img src="img/github-black.svg">
-                    <span>Github</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://codepen.io/verybradthings/">
-                    <img src="img/codepen-black.svg">
-                    <span>Codepen</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/brad-brock-860a4031">
-                    <img src="img/linkedin-black.svg">
-                    <span>LinkedIn</span>
-                </a>
-            </li>
-        </ul>
+    <div class="title">
+        <h1>Brad Brock</h1>
+        <h2>UI Developer + Designer</h2>
     </div>
+    <ul class="link-gallery">
+        <li>
+            <a href="https://github.com/bradbrock">
+                <img src="img/github-black.svg">
+                <span>Github</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://codepen.io/verybradthings/">
+                <img src="img/codepen-black.svg">
+                <span>Codepen</span>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/in/brad-brock-860a4031">
+                <img src="img/linkedin-black.svg">
+                <span>LinkedIn</span>
+            </a>
+        </li>
+    </ul>
 </header>
 
 <main>
 
-    <div class="wrap">
-        <div class="grid">
-            <div class="col col--body">
-                <section class="card">
-                    <h3>Experience</h3>
+    <section class="card experience">
+        <h3>Experience</h3>
+            <ul class="article-list">
+                <li>
                     <article>
                         <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
                         <ul>
@@ -56,6 +53,8 @@
                             <li>Implement complete redesign of checkout process.</li>
                         </ul>
                     </article>
+                </li>
+                <li>
                     <article>
                         <h4>UI Developer 2, Fossil Group | June 2018 - October 2021</h4>
                         <ul>
@@ -65,6 +64,8 @@
                             <li>Created email templates used by multiple Fossil Group brands in AMPscript, as well as their related data extentions, allowing for personalization in transactional and marketing emails.</li>
                         </ul>
                     </article>
+                </li>
+                <li>
                     <article>
                         <h4>Front End Developer, Lifeblue | February 2017 - October 2017</h4>
                         <ul>
@@ -73,6 +74,8 @@
                             <li>Performed maintenance and implemented updates to a news outlet website that serves 9 million monthly unique visitors.</li>
                         </ul>
                     </article>
+                </li>
+                <li>
                     <article>
                         <h4>UI Designer, Kalkomey | March 2016 - February 2017</h4>
                         <ul>
@@ -81,6 +84,8 @@
                             <li>Created pattern libraries for new products to maintain consistent style throughout the development process.</li>
                         </ul>
                     </article>
+                </li>
+                <li>
                     <article>
                         <h4>Web Producer, Apollo Interactive | May 2014 - March 2016</h4>
                         <ul>
@@ -89,108 +94,134 @@
                             <li>Created prototypes of new features and designs to be implemented on a banking website that serves thirteen central Texas communities.</li>
                         </ul>
                     </article>
-                    <h3>Projects</h3>
-                    <article>
-                        <ul class="gallery">
-                            <li class="gallery-item">
-                                <a href="https://www.fossil.com" id="fossilEcommProject">
-                                    <p class="gallery-item__title">Fossil Ecomm</p>
-                                    <p class="gallery-item__subtitle">Fossil (2021)</p>
-                                </a>
-                            </li>
-                            <li class="gallery-item">
-                                <a href="https://www.behance.net/gallery/59120319/Heifer-International-Shopping-Cart-(2017)" id="heiferCartProject">
-                                    <p class="gallery-item__title">Shopping Cart &amp; Checkout</p>
-                                    <p class="gallery-item__subtitle">Heifer Intl (2017)</p>
-                                </a>
-                            </li>
-                            <li class="gallery-item">
-                                <a href="https://www.behance.net/gallery/59124411/Quiz-Heifer-Intl-(2017)">
-                                    <p class="gallery-item__title">Quiz</p>
-                                    <p class="gallery-item__subtitle">Heifer Intl (2017)</p>
-                                </a>
-                            </li>
-                            <li class="gallery-item">
-                                <a href="https://www.behance.net/gallery/59089667/AMS-Certification-Manager-(2016)" id="kalkomeyProject">
-                                    <p class="gallery-item__title">Certification Manager</p>
-                                    <p class="gallery-item__subtitle">Kalkomey (2016)</p>
-                                </a>
-                            </li>
-                            <li class="gallery-item">
-                                <a href="https://www.behance.net/gallery/59089551/Visionworks-Try-On-View-(2015)" id="visionWorksProject">
-                                    <p class="gallery-item__title">Try-on View</p>
-                                    <p class="gallery-item__subtitle">Visionworks (2015)</p>
-                                </a>
-                            </li>
-                            <li class="gallery-item">
-                                <a href="https://www.behance.net/gallery/59089479/Curves-Gym-Sales-Funnel-(2015)" id="curvesProject">
-                                    <p class="gallery-item__title">Sales Funnel</p>
-                                    <p class="gallery-item__subtitle">Curves Gyms (2015)</p>
-                                </a>
-                            </li>
-                            <!-- <li class="gallery-item">
-                                <a href="https://www.behance.net/gallery/59089753/Einstein-Bros-Landing-Page-(2014)" id="einsteinsProject">
-                                    <p class="gallery-item__title">Promo Landing Page</p>
-                                    <p class="gallery-item__subtitle">Einstein Bros. (2014)</p>
-                                </a>
-                            </li> -->
-                        </ul>
-                    </article>
-                    <h3>Clients</h3>
-                    <article>
-                        <ul class="column-list">
-                            <li>Heifer International</li>
-                            <li>Dallas Morning News</li>
-                            <li>Perot Museum of Nature &amp; Science</li>
-                            <li>George W. Bush Presidential Center</li>
-                            <li>Visionworks</li>
-                            <li>Einstein's Bagels</li>
-                            <li>Wingstop</li>
-                            <li>Conn's HomePlus</li>
-                            <li>Curve's Gym</li>
-                            <li>Dallas Convention &amp; Visitors Bureau</li>
-                            <li>Extraco Banks</li>
-                        </ul>
-                    </article>
-                </section>
-            </div>
-            <div class="col col--sidebar col--sidebar-left">
-                <section>
-                    <article>
-                        <ul class="list-row">
-                            <li>
-                                <h4>Tech Skills</h4>
-                                <ul>
-                                    <li>HTML5 / CSS3</li>
-                                    <li>Sass / Less</li>
-                                    <li>BEM</li>
-                                    <li>ReactJS</li>
-                                    <li>VueJS</li>
-                                    <li>Gulp / Grunt</li>
-                                    <li>Git</li>
-                                </ul>
-                            </li>
-                            <li>
-                                <h4>Software</h4>
-                                <ul>
-                                    <li>Bohemian Sketch</li>
-                                    <li>UXPin</li>
-                                    <li>XD (Experience Design)</li>
-                                    <li>Illustrator</li>
-                                    <li>Photoshop</li>
-                                    <li>Jira</li>
-                                </ul>
-                            </li>
-                            <li>
-                                <h4>Education</h4>
-                                <p>B.A. Art and Technology<br>University of Texas at Dallas<br>December 2013</p>
-                            </li>
-                        </ul>
-                    </article>
-                </section>
-            </div>
-        </div>
-    </div>
+                </li>
+            </ul>
+        </section>
+
+    <section class="card">
+        <h3>Projects</h3>
+        <article>
+            <ul class="gallery">
+                <li class="gallery-item">
+                    <a href="https://www.fossil.com" id="fossilEcommProject">
+                        <p class="gallery-item__title">Fossil Ecomm</p>
+                        <p class="gallery-item__subtitle">Fossil (2021)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59120319/Heifer-International-Shopping-Cart-(2017)" id="heiferCartProject">
+                        <p class="gallery-item__title">Heifer Ecomm</p>
+                        <p class="gallery-item__subtitle">Heifer (2017)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59124411/Quiz-Heifer-Intl-(2017)">
+                        <p class="gallery-item__title">Quiz</p>
+                        <p class="gallery-item__subtitle">Heifer (2017)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089667/AMS-Certification-Manager-(2016)" id="kalkomeyProject">
+                        <p class="gallery-item__title">Certification Manager</p>
+                        <p class="gallery-item__subtitle">Kalkomey (2016)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089551/Visionworks-Try-On-View-(2015)" id="visionWorksProject">
+                        <p class="gallery-item__title">Try-on View</p>
+                        <p class="gallery-item__subtitle">Visionworks (2015)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089479/Curves-Gym-Sales-Funnel-(2015)" id="curvesProject">
+                        <p class="gallery-item__title">Sales Funnel</p>
+                        <p class="gallery-item__subtitle">Curves Gyms (2015)</p>
+                    </a>
+                </li>
+                <!-- <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089753/Einstein-Bros-Landing-Page-(2014)" id="einsteinsProject">
+                        <p class="gallery-item__title">Promo Landing Page</p>
+                        <p class="gallery-item__subtitle">Einstein Bros. (2014)</p>
+                    </a>
+                </li> -->
+            </ul>
+        </article>
+    </section>
+
+    <section class="card">
+        <h3>Clients</h3>
+        <article>
+            <ul class="client-list">
+                <li>
+                    <img src="img/heifer-logo.svg" alt="Heifer International logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/dmn-logo.gif" alt="Dallas Morning News logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/perot-logo.png" alt="Perot Museum logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/gwb-logo.png" alt="George W. Bush Presidential Center logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/visionworks-logo.svg" alt="Visionworks logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/einstein-logo.png" alt="Einstein Bros Bagels logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/wingstop-logo.png" alt="Wingstop logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/conns-logo.svg" alt="Conn's Home Plus logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/curves-logo.svg" alt="Curve's Gym logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/visit-dallas-logo.svg" alt="Visit Dallas logo" class="logo" />
+                </li>
+                <li>
+                    <img src="img/extraco-logo.png" alt="Extraco Banks logo" class="logo" />
+                </li>
+            </ul>
+        </article>
+    </section>
+
+    <section class="card">
+        <article>
+            <ul class="list-row">
+                <li>
+                    <h4>Tech Skills</h4>
+                    <ul>
+                        <li>HTML5 / CSS3</li>
+                        <li>Sass / Less</li>
+                        <li>BEM</li>
+                        <li>ReactJS</li>
+                        <li>VueJS</li>
+                        <li>Gulp / Grunt</li>
+                        <li>Git</li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>Software</h4>
+                    <ul>
+                        <li>Bohemian Sketch</li>
+                        <li>UXPin</li>
+                        <li>XD (Experience Design)</li>
+                        <li>Illustrator</li>
+                        <li>Photoshop</li>
+                        <li>Jira</li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>Education</h4>
+                    <p>B.A. Art and Technology<br>University of Texas at Dallas<br>December 2013</p>
+                </li>
+            </ul>
+        </article>
+    </section>
 
     <div class="wrap">
         <footer>
