Tweaking grid layout

--- a/index.html
+++ b/index.html
@@ -41,114 +41,98 @@
 
 <main>
 
-    <section class="card experience">
-        <h3>Experience</h3>
-            <ul class="article-list">
-                <li>
-                    <article>
-                        <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
-                        <ul>
-                            <li>Implemented updated sitewide redesign.</li>
-                            <li>Create A/B test campaigns in Salesforce Interaction Studio (Evergage).</li>
-                            <li>Implement complete redesign of checkout process.</li>
-                        </ul>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h4>UI Developer 2, Fossil Group | June 2018 - October 2021</h4>
-                        <ul>
-                            <li>Collaborated with UX and UI designers to implement a design refresh of skagen.com.</li>
-                            <li>Worked with in-house AllY specialists to ensure accessibility best practices on fossil.com, as well as other Fossil-owned brand websites.</li>
-                            <li>Implemented GDRP compliance on European e-commerce sites.</li>
-                            <li>Created email templates used by multiple Fossil Group brands in AMPscript, as well as their related data extentions, allowing for personalization in transactional and marketing emails.</li>
-                        </ul>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h4>Front End Developer, Lifeblue | February 2017 - October 2017</h4>
-                        <ul>
-                            <li>Continuous refinement of VueJS-based e-commerce platform that generates millions of dollars in yearly revenue.</li>
-                            <li>Developed and implemented authoring and workflow tools for a custom built, journalism-focused CMS.</li>
-                            <li>Performed maintenance and implemented updates to a news outlet website that serves 9 million monthly unique visitors.</li>
-                        </ul>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h4>UI Designer, Kalkomey | March 2016 - February 2017</h4>
-                        <ul>
-                            <li>Designed and implemented interface components for a brand new government agency licensing platform now in use by six states.</li>
-                            <li>Maintained and modernized existing e-learning web applications.</li>
-                            <li>Created pattern libraries for new products to maintain consistent style throughout the development process.</li>
-                        </ul>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h4>Web Producer, Apollo Interactive | May 2014 - March 2016</h4>
-                        <ul>
-                            <li>Built templates for biweekly email campaigns for a national retailer.</li>
-                            <li>Developed layout and style for a bagel shop website with hundreds of locations nationwide.</li>
-                            <li>Created prototypes of new features and designs to be implemented on a banking website that serves thirteen central Texas communities.</li>
-                        </ul>
-                    </article>
-                </li>
-            </ul>
-        </section>
-
     <section class="card">
-        <h3>Projects</h3>
         <article>
-            <ul class="gallery">
-                <li class="gallery-item">
-                    <a href="https://www.fossil.com" id="fossilEcommProject">
-                        <p class="gallery-item__title">Fossil Ecomm</p>
-                        <p class="gallery-item__subtitle">Fossil (2021)</p>
-                    </a>
+            <ul class="list-row">
+                <li>
+                    <h4>Tech Skills</h4>
+                    <ul>
+                        <li>HTML5 / CSS3</li>
+                        <li>Sass / Less</li>
+                        <li>BEM</li>
+                        <li>ReactJS</li>
+                        <li>VueJS</li>
+                        <li>Gulp / Grunt</li>
+                        <li>Git</li>
+                    </ul>
                 </li>
-                <li class="gallery-item">
-                    <a href="https://www.behance.net/gallery/59120319/Heifer-International-Shopping-Cart-(2017)" id="heiferCartProject">
-                        <p class="gallery-item__title">Heifer Ecomm</p>
-                        <p class="gallery-item__subtitle">Heifer (2017)</p>
-                    </a>
+                <li>
+                    <h4>Software</h4>
+                    <ul>
+                        <li>Bohemian Sketch</li>
+                        <li>UXPin</li>
+                        <li>XD (Experience Design)</li>
+                        <li>Illustrator</li>
+                        <li>Photoshop</li>
+                        <li>Jira</li>
+                    </ul>
                 </li>
-                <li class="gallery-item">
-                    <a href="https://www.behance.net/gallery/59124411/Quiz-Heifer-Intl-(2017)">
-                        <p class="gallery-item__title">Quiz</p>
-                        <p class="gallery-item__subtitle">Heifer (2017)</p>
-                    </a>
+                <li>
+                    <h4>Education</h4>
+                    <p>B.A. Art and Technology<br>University of Texas at Dallas<br>December 2013</p>
                 </li>
-                <li class="gallery-item">
-                    <a href="https://www.behance.net/gallery/59089667/AMS-Certification-Manager-(2016)" id="kalkomeyProject">
-                        <p class="gallery-item__title">Certification Manager</p>
-                        <p class="gallery-item__subtitle">Kalkomey (2016)</p>
-                    </a>
-                </li>
-                <li class="gallery-item">
-                    <a href="https://www.behance.net/gallery/59089551/Visionworks-Try-On-View-(2015)" id="visionWorksProject">
-                        <p class="gallery-item__title">Try-on View</p>
-                        <p class="gallery-item__subtitle">Visionworks (2015)</p>
-                    </a>
-                </li>
-                <li class="gallery-item">
-                    <a href="https://www.behance.net/gallery/59089479/Curves-Gym-Sales-Funnel-(2015)" id="curvesProject">
-                        <p class="gallery-item__title">Sales Funnel</p>
-                        <p class="gallery-item__subtitle">Curves Gyms (2015)</p>
-                    </a>
-                </li>
-                <!-- <li class="gallery-item">
-                    <a href="https://www.behance.net/gallery/59089753/Einstein-Bros-Landing-Page-(2014)" id="einsteinsProject">
-                        <p class="gallery-item__title">Promo Landing Page</p>
-                        <p class="gallery-item__subtitle">Einstein Bros. (2014)</p>
-                    </a>
-                </li> -->
             </ul>
         </article>
     </section>
 
-    <section class="card">
+    <section class="card experience">
+        <h3>Experience</h3>
+        <ul class="article-list">
+            <li>
+                <article>
+                    <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
+                    <ul>
+                        <li>Implemented updated sitewide redesign.</li>
+                        <li>Create A/B test campaigns in Salesforce Interaction Studio (Evergage).</li>
+                        <li>Implement complete redesign of checkout process.</li>
+                    </ul>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h4>UI Developer 2, Fossil Group | June 2018 - October 2021</h4>
+                    <ul>
+                        <li>Collaborated with UX and UI designers to implement a design refresh of skagen.com.</li>
+                        <li>Worked with in-house AllY specialists to ensure accessibility best practices on fossil.com, as well as other Fossil-owned brand websites.</li>
+                        <li>Implemented GDRP compliance on European e-commerce sites.</li>
+                        <li>Created email templates used by multiple Fossil Group brands in AMPscript, as well as their related data extentions, allowing for personalization in transactional and marketing emails.</li>
+                    </ul>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h4>Front End Developer, Lifeblue | February 2017 - October 2017</h4>
+                    <ul>
+                        <li>Continuous refinement of VueJS-based e-commerce platform that generates millions of dollars in yearly revenue.</li>
+                        <li>Developed and implemented authoring and workflow tools for a custom built, journalism-focused CMS.</li>
+                        <li>Performed maintenance and implemented updates to a news outlet website that serves 9 million monthly unique visitors.</li>
+                    </ul>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h4>UI Designer, Kalkomey | March 2016 - February 2017</h4>
+                    <ul>
+                        <li>Designed and implemented interface components for a brand new government agency licensing platform now in use by six states.</li>
+                        <li>Maintained and modernized existing e-learning web applications.</li>
+                        <li>Created pattern libraries for new products to maintain consistent style throughout the development process.</li>
+                    </ul>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h4>Web Producer, Apollo Interactive | May 2014 - March 2016</h4>
+                    <ul>
+                        <li>Built templates for biweekly email campaigns for a national retailer.</li>
+                        <li>Developed layout and style for a bagel shop website with hundreds of locations nationwide.</li>
+                        <li>Created prototypes of new features and designs to be implemented on a banking website that serves thirteen central Texas communities.</li>
+                    </ul>
+                </article>
+            </li>
+        </ul>
+    </section>
+
+    <section class="card clients">
         <h3>Clients</h3>
         <article>
             <ul class="client-list">
@@ -189,41 +173,57 @@
         </article>
     </section>
 
-    <section class="card">
+    <!-- <section class="card">
+        <h3>Projects</h3>
         <article>
-            <ul class="list-row">
-                <li>
-                    <h4>Tech Skills</h4>
-                    <ul>
-                        <li>HTML5 / CSS3</li>
-                        <li>Sass / Less</li>
-                        <li>BEM</li>
-                        <li>ReactJS</li>
-                        <li>VueJS</li>
-                        <li>Gulp / Grunt</li>
-                        <li>Git</li>
-                    </ul>
+            <ul class="gallery">
+                <li class="gallery-item">
+                    <a href="https://www.fossil.com" id="fossilEcommProject">
+                        <p class="gallery-item__title">Fossil Ecomm</p>
+                        <p class="gallery-item__subtitle">Fossil (2021)</p>
+                    </a>
                 </li>
-                <li>
-                    <h4>Software</h4>
-                    <ul>
-                        <li>Bohemian Sketch</li>
-                        <li>UXPin</li>
-                        <li>XD (Experience Design)</li>
-                        <li>Illustrator</li>
-                        <li>Photoshop</li>
-                        <li>Jira</li>
-                    </ul>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59120319/Heifer-International-Shopping-Cart-(2017)" id="heiferCartProject">
+                        <p class="gallery-item__title">Heifer Ecomm</p>
+                        <p class="gallery-item__subtitle">Heifer (2017)</p>
+                    </a>
                 </li>
-                <li>
-                    <h4>Education</h4>
-                    <p>B.A. Art and Technology<br>University of Texas at Dallas<br>December 2013</p>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59124411/Quiz-Heifer-Intl-(2017)">
+                        <p class="gallery-item__title">Quiz</p>
+                        <p class="gallery-item__subtitle">Heifer (2017)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089667/AMS-Certification-Manager-(2016)" id="kalkomeyProject">
+                        <p class="gallery-item__title">Certification Manager</p>
+                        <p class="gallery-item__subtitle">Kalkomey (2016)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089551/Visionworks-Try-On-View-(2015)" id="visionWorksProject">
+                        <p class="gallery-item__title">Try-on View</p>
+                        <p class="gallery-item__subtitle">Visionworks (2015)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089479/Curves-Gym-Sales-Funnel-(2015)" id="curvesProject">
+                        <p class="gallery-item__title">Sales Funnel</p>
+                        <p class="gallery-item__subtitle">Curves Gyms (2015)</p>
+                    </a>
+                </li>
+                <li class="gallery-item">
+                    <a href="https://www.behance.net/gallery/59089753/Einstein-Bros-Landing-Page-(2014)" id="einsteinsProject">
+                        <p class="gallery-item__title">Promo Landing Page</p>
+                        <p class="gallery-item__subtitle">Einstein Bros. (2014)</p>
+                    </a>
                 </li>
             </ul>
         </article>
-    </section>
+    </section> -->
 
-    <div class="wrap">
+    <!-- <div class="wrap">
         <footer>
             <div class="footer-col">
                 <p>References available upon request.</p>
@@ -240,7 +240,7 @@
                 <p>Carrollton, Texas</p>
             </div>
         </footer>
-    </div>
+    </div> -->
 
 </main>
 
