--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             <div class="col col--body">
                 <section class="card">
                     <h3>Experience</h3>
-                    <article>
+                    <!-- <article>
                         <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
                         <ul>
                             <li>Implemented updated sitewide redesign.</li>
                             <li>Create A/B test campaigns in Salesforce Interaction Studio (Evergage).</li>
                             <li>Implement complete redesign of checkout process.</li>
                         </ul>
-                    </article>
+                    </article> -->
                     <article>
                         <h4>UI Developer 2, Fossil Group | June 2018 - October 2021</h4>
                         <ul>
