Update experience content

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                     <!-- <article>
                         <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
                         <ul>
+                            <li>Ensure site content adheres to A11y accessibility standards.</li>
                             <li>Implemented updated sitewide redesign.</li>
-                            <li>Create A/B test campaigns in Salesforce Interaction Studio (Evergage).</li>
+                            <li>Work with marketing team to create A/B test campaigns in Salesforce Interaction Studio (Evergage).</li>
                             <li>Implement complete redesign of checkout process.</li>
                         </ul>
                     </article> -->
