Tag lists for skills and software sections

--- a/index.html
+++ b/index.html
@@ -161,22 +161,25 @@
                         <ul class="list-row">
                             <li>
                                 <h4>Tech Skills</h4>
-                                <ul>
-                                    <li>HTML5 / CSS3</li>
-                                    <li>Sass / Less</li>
+                                <ul class="tag-list">
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
+                                    <li>ES6</li>
+                                    <li>SCSS</li>
                                     <li>BEM</li>
-                                    <li>ReactJS</li>
-                                    <li>VueJS</li>
-                                    <li>Gulp / Grunt</li>
+                                    <li>React</li>
+                                    <li>Vue</li>
                                     <li>Git</li>
+                                    <li>Gulp</li>
                                 </ul>
                             </li>
                             <li>
                                 <h4>Software</h4>
-                                <ul>
-                                    <li>Bohemian Sketch</li>
+                                <ul class="tag-list">
+                                    <li>Figma</li>
+                                    <li>Sketch</li>
                                     <li>UXPin</li>
-                                    <li>XD (Experience Design)</li>
+                                    <li>XD</li>
                                     <li>Illustrator</li>
                                     <li>Photoshop</li>
                                     <li>Jira</li>
