--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </ul>
                     </article> -->
                     <article>
-                        <h4>UI Developer 2, Fossil Group | June 2018 - October 2021</h4>
+                        <h4>UI Developer II, Fossil Group | June 2018 - October 2021</h4>
                         <ul>
                             <li>Collaborated with UX and UI designers to implement a design refresh of skagen.com.</li>
                             <li>Worked with in-house AllY specialists to ensure accessibility best practices on fossil.com, as well as other Fossil-owned brand websites.</li>
