--- a/index.html
+++ b/index.html
@@ -48,17 +48,16 @@
             <div class="col col--body">
                 <section class="card">
                     <h3>Experience</h3>
-                    <!-- <article>
+                    <article>
                         <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
                         <ul>
-                            <li>Ensure site content adheres to A11y accessibility standards.</li>
-                            <li>Implemented updated sitewide redesign.</li>
-                            <li>Work with marketing team to create A/B test campaigns in Salesforce Interaction Studio (Evergage).</li>
-                            <li>Implement complete redesign of checkout process.</li>
+                            <li>Implemented a site-wide redesign, modernizing the UI and making it fully responsive and device-agnostic</li>
+                            <li>Continually ensure all content and and interface components adhere to current WCAG accessibility standards.</li>
+                            <li>Work with marketing and UI designers to create A/B tests of future design features and new functionality.</li>
                         </ul>
-                    </article> -->
+                    </article>
                     <article>
-                        <h4>UI Developer II, Fossil Group | June 2018 - October 2021</h4>
+                        <h4>UI Developer II, Fossil Group | June 2018 - September 2021</h4>
                         <ul>
                             <li>Collaborated with UX and UI designers to implement a design refresh of skagen.com.</li>
                             <li>Worked with in-house AllY specialists to ensure accessibility best practices on fossil.com, as well as other Fossil-owned brand websites.</li>
