--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h4>Front End Developer, Cinemark | Octoboer 2021 - present</h4>
                         <ul>
                             <li>Implemented a site-wide redesign, modernizing the UI and making it fully responsive and device-agnostic</li>
-                            <li>Continually ensure all content and and interface components adhere to current WCAG accessibility standards.</li>
+                            <li>Continually ensure all content and interface components adhere to current WCAG accessibility standards.</li>
                             <li>Work with marketing and UI designers to create A/B tests of future design features and new functionality.</li>
                         </ul>
                     </article>
