Hide project section in print media

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             <li>Created prototypes of new features and designs to be implemented on a banking website that serves thirteen central Texas communities.</li>
                         </ul>
                     </article>
-                    <h3>Projects</h3>
-                    <article>
+                    <h3 class="print">Projects</h3>
+                    <article class="print">
                         <ul class="gallery">
                             <li class="gallery-item">
                                 <a href="https://www.fossil.com" id="fossilEcommProject">
